# project-release

./: .envrc  .gitignore  .pre-commit-config.yaml  .project-release-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-and-publish.yml  enforce-conventional-commits.yml  ghactions-autoupdate.yml  pytest-and-coverage.yml
docs/: Makefile  advanced.rst  api.rst  conf.py  config.rst  index.rst  requirements.txt
src/project_release/: __main__.py  _pydantic.py  cli.py  config.py  convention.py  error.py  file.py  git.py  tui.py  utils.py  validation.py
src/project_release/fsm/: __init__.py
tests/: cli_test.py  config_test.py  convention_test.py  file_test.py  requirements.txt  validation_test.py
