[build-system]
requires = ["setuptools >= 46.4.0"]
build-backend = "setuptools.build_meta"

[[tool.mypy.overrides]]
module = ["schema", "semver"]
ignore_missing_imports = true

[tool.pylint."messages control"]
disable = ["too-few-public-methods"]

[tool.bandit.assert_used]
skips =  ["*_test.py"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)8s %(message)s"
