[build-system]
requires = ["setuptools >= 46.4.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = "pydantic.mypy"

[tool.pylint."messages control"]
disable = ["too-few-public-methods"]

[tool.bandit.assert_used]
skips =  ["*_test.py"]

[tool.pytest.ini_options]
pythonpath = "src"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)8s %(message)s"
