[build-system]
requires = ["setuptools >= 46.4.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
src = ["src"]
target-version = "py38"

[tool.ruff.lint]
select = [
	#  Recommended
	"A", "C90", "D", "E", "F", "I", "N", "PL", "S", "UP", "W",
	# Optional
	"PT", "RUF", "SIM",
]

[tool.ruff.lint.extend-per-file-ignores]
"*_test.py" = [
	"PLR2004", # Allow magic values in tests
	"S101",    # Allow assert() in tests
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = "pydantic.mypy"

[tool.pytest.ini_options]
pythonpath = "src"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)8s %(message)s"
